prends en charge les cas avec plusieurs candidat-e-s de la même nuance sur la même circonscription

--- a/prep_lg2024.ipynb
+++ b/prep_lg2024.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "2027c6b1-e8aa-495b-9cf0-8db1f1100e14",
    "metadata": {},
    "outputs": [
@@ -965,7 +965,7 @@
        "      <th>0101</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>VINCENT Cyril</td>\n",
+       "      <td>VINCENT Cyril, MENDES Michael</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1012,7 +1012,7 @@
        "    <tr>\n",
        "      <th>0103</th>\n",
        "      <td></td>\n",
-       "      <td>TONIZZO Sofia</td>\n",
+       "      <td>TONIZZO Sofia, KOUASSI Fulgence</td>\n",
        "      <td>VEILLEROT Annick</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1036,7 +1036,7 @@
        "    <tr>\n",
        "      <th>0104</th>\n",
        "      <td></td>\n",
-       "      <td>BRESSON Yannick</td>\n",
+       "      <td>BRESSON Yannick, NICAUD Jérémy</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1108,7 +1108,7 @@
        "    <tr>\n",
        "      <th>ZZ07</th>\n",
        "      <td></td>\n",
-       "      <td>GEFFRAY Fanny</td>\n",
+       "      <td>GEFFRAY Fanny, CHAMBON Jérôme</td>\n",
        "      <td></td>\n",
        "      <td>HUQUET Isabelle</td>\n",
        "      <td></td>\n",
@@ -1132,7 +1132,7 @@
        "    <tr>\n",
        "      <th>ZZ08</th>\n",
        "      <td></td>\n",
-       "      <td>SPITALAS Nicolas</td>\n",
+       "      <td>SPITALAS Nicolas, BIZET David, SIGOURA Benjamin</td>\n",
        "      <td></td>\n",
        "      <td>NEFFATI Gilles</td>\n",
        "      <td>HABABOU SOLOMON Philippe</td>\n",
@@ -1142,7 +1142,7 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>...</td>\n",
-       "      <td>HABIB Meyer</td>\n",
+       "      <td>HABIB Meyer, ASSOULINE Aurelie</td>\n",
        "      <td></td>\n",
        "      <td>BENSOUSSAN Guillaume</td>\n",
        "      <td></td>\n",
@@ -1156,11 +1156,11 @@
        "    <tr>\n",
        "      <th>ZZ09</th>\n",
        "      <td></td>\n",
-       "      <td>OUDRHIRI Hassan</td>\n",
+       "      <td>OUDRHIRI Hassan, SIDIBÉ Gabriel Marie, DIANIFA...</td>\n",
        "      <td>FADILI Hachim</td>\n",
-       "      <td>TAHIRI Rachid</td>\n",
-       "      <td>SACKHO Kourtoum</td>\n",
-       "      <td>BOUDJEKADA Ismaël</td>\n",
+       "      <td>TAHIRI Rachid, DUCELLIER Régina</td>\n",
+       "      <td>SACKHO Kourtoum, DAVOUX Erwan Borhan</td>\n",
+       "      <td>BOUDJEKADA Ismaël, TINAUGUS Edouard, KHALFI Se...</td>\n",
        "      <td></td>\n",
        "      <td>DJOUADI Samira</td>\n",
        "      <td></td>\n",
@@ -1180,9 +1180,9 @@
        "    <tr>\n",
        "      <th>ZZ10</th>\n",
        "      <td></td>\n",
-       "      <td>MOJON-CHEMINADE Odile</td>\n",
+       "      <td>MOJON-CHEMINADE Odile, MARIE-LOUISE Hugues Mic...</td>\n",
        "      <td></td>\n",
-       "      <td>MABASI Marie Josée</td>\n",
+       "      <td>MABASI Marie Josée, HOJEIJ Ali Camille</td>\n",
        "      <td></td>\n",
        "      <td>MAZOT Nathalie</td>\n",
        "      <td></td>\n",
@@ -1204,12 +1204,12 @@
        "    <tr>\n",
        "      <th>ZZ11</th>\n",
        "      <td></td>\n",
-       "      <td>VIOLETTE Nelly</td>\n",
-       "      <td>PHONRATH Elise</td>\n",
+       "      <td>VIOLETTE Nelly, MAUREL Victor, MACHET Olivier,...</td>\n",
+       "      <td>PHONRATH Elise, ASSELINEAU François</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td>MARTIN Nathalie</td>\n",
-       "      <td>CRUCIANI Jordan</td>\n",
+       "      <td>CRUCIANI Jordan, BOTEVA-MALO Tatiana</td>\n",
        "      <td>GENETET Anne</td>\n",
        "      <td>GUYON Marc</td>\n",
        "      <td></td>\n",
@@ -1231,61 +1231,117 @@
        "</div>"
       ],
       "text/plain": [
-       "CodNuaCand COM                    DIV               DSV                 DVC  \\\n",
-       "CodCirc                                                                       \n",
-       "0101                                      VINCENT Cyril                       \n",
-       "0102                                                          DAUBIÉ Romain   \n",
-       "0103                    TONIZZO Sofia  VEILLEROT Annick                       \n",
-       "0104                  BRESSON Yannick                                         \n",
-       "0105                                                                          \n",
-       "...         ..                    ...               ...                 ...   \n",
-       "ZZ07                    GEFFRAY Fanny                       HUQUET Isabelle   \n",
-       "ZZ08                 SPITALAS Nicolas                        NEFFATI Gilles   \n",
-       "ZZ09                  OUDRHIRI Hassan     FADILI Hachim       TAHIRI Rachid   \n",
-       "ZZ10            MOJON-CHEMINADE Odile                    MABASI Marie Josée   \n",
-       "ZZ11                   VIOLETTE Nelly    PHONRATH Elise                       \n",
+       "CodNuaCand COM                                                DIV  \\\n",
+       "CodCirc                                                             \n",
+       "0101                                                                \n",
+       "0102                                                                \n",
+       "0103                              TONIZZO Sofia, KOUASSI Fulgence   \n",
+       "0104                               BRESSON Yannick, NICAUD Jérémy   \n",
+       "0105                                                                \n",
+       "...         ..                                                ...   \n",
+       "ZZ07                                GEFFRAY Fanny, CHAMBON Jérôme   \n",
+       "ZZ08              SPITALAS Nicolas, BIZET David, SIGOURA Benjamin   \n",
+       "ZZ09            OUDRHIRI Hassan, SIDIBÉ Gabriel Marie, DIANIFA...   \n",
+       "ZZ10            MOJON-CHEMINADE Odile, MARIE-LOUISE Hugues Mic...   \n",
+       "ZZ11            VIOLETTE Nelly, MAUREL Victor, MACHET Olivier,...   \n",
        "\n",
-       "CodNuaCand                       DVD                DVG               ECO  \\\n",
-       "CodCirc                                                                     \n",
-       "0101                                                                        \n",
-       "0102                                                                        \n",
-       "0103                                                                        \n",
-       "0104                                                                        \n",
-       "0105                     ABAD Damien                     CHATELARD Thomas   \n",
-       "...                              ...                ...               ...   \n",
-       "ZZ07                                     RICHARD Cécile                     \n",
-       "ZZ08        HABABOU SOLOMON Philippe  CHARTRAIN Valérie                     \n",
-       "ZZ09                 SACKHO Kourtoum  BOUDJEKADA Ismaël                     \n",
-       "ZZ10                                     MAZOT Nathalie                     \n",
-       "ZZ11                                    MARTIN Nathalie   CRUCIANI Jordan   \n",
+       "CodNuaCand                                  DSV  \\\n",
+       "CodCirc                                           \n",
+       "0101              VINCENT Cyril, MENDES Michael   \n",
+       "0102                                              \n",
+       "0103                           VEILLEROT Annick   \n",
+       "0104                                              \n",
+       "0105                                              \n",
+       "...                                         ...   \n",
+       "ZZ07                                              \n",
+       "ZZ08                                              \n",
+       "ZZ09                              FADILI Hachim   \n",
+       "ZZ10                                              \n",
+       "ZZ11        PHONRATH Elise, ASSELINEAU François   \n",
        "\n",
-       "CodNuaCand                  ENS             EXD                 EXG  ...  \\\n",
-       "CodCirc                                                              ...   \n",
-       "0101         GUILLERMIN Vincent                           LAHY Éric  ...   \n",
-       "0102                             EYRAUD Olivier    GOUTAGNY Vincent  ...   \n",
-       "0103              GIVERNET Olga                  MAISONNETTE Cécile  ...   \n",
-       "0104        COQUELET Christophe                     COUSSON Sylvain  ...   \n",
-       "0105          DESCOURS Nathalie                       CROZET Sylvie  ...   \n",
-       "...                         ...             ...                 ...  ...   \n",
-       "ZZ07             PETIT Frédéric                                      ...   \n",
-       "ZZ08             YADAN Caroline                                      ...   \n",
-       "ZZ09             DJOUADI Samira                                      ...   \n",
-       "ZZ10             LAKRAFI Amélia                                      ...   \n",
-       "ZZ11               GENETET Anne      GUYON Marc                      ...   \n",
+       "CodNuaCand                                     DVC  \\\n",
+       "CodCirc                                              \n",
+       "0101                                                 \n",
+       "0102                                 DAUBIÉ Romain   \n",
+       "0103                                                 \n",
+       "0104                                                 \n",
+       "0105                                                 \n",
+       "...                                            ...   \n",
+       "ZZ07                               HUQUET Isabelle   \n",
+       "ZZ08                                NEFFATI Gilles   \n",
+       "ZZ09               TAHIRI Rachid, DUCELLIER Régina   \n",
+       "ZZ10        MABASI Marie Josée, HOJEIJ Ali Camille   \n",
+       "ZZ11                                                 \n",
        "\n",
-       "CodNuaCand                       LR RDG                    REC  \\\n",
-       "CodCirc                                                          \n",
-       "0101                  BRETON Xavier                              \n",
-       "0102               NANCHI Alexandre                              \n",
-       "0103                   UNAL Khadija                              \n",
-       "0104                  BILLOUDET Guy                              \n",
-       "0105                BOURDIN Fabrice       PATRU Maria Cristina   \n",
-       "...                             ...  ..                    ...   \n",
-       "ZZ07        MIER-GARRIGOU Dominique            ALEXANDRE Julie   \n",
-       "ZZ08                    HABIB Meyer       BENSOUSSAN Guillaume   \n",
-       "ZZ09               BADREDDINE Jihad              DREVON Pierre   \n",
-       "ZZ10                    LAMAH Lucas         CASTELLAN Philippe   \n",
-       "ZZ11                                     LARQUEMIN Anne-France   \n",
+       "CodNuaCand                                   DVD  \\\n",
+       "CodCirc                                            \n",
+       "0101                                               \n",
+       "0102                                               \n",
+       "0103                                               \n",
+       "0104                                               \n",
+       "0105                                 ABAD Damien   \n",
+       "...                                          ...   \n",
+       "ZZ07                                               \n",
+       "ZZ08                    HABABOU SOLOMON Philippe   \n",
+       "ZZ09        SACKHO Kourtoum, DAVOUX Erwan Borhan   \n",
+       "ZZ10                                               \n",
+       "ZZ11                                               \n",
+       "\n",
+       "CodNuaCand                                                DVG  \\\n",
+       "CodCirc                                                         \n",
+       "0101                                                            \n",
+       "0102                                                            \n",
+       "0103                                                            \n",
+       "0104                                                            \n",
+       "0105                                                            \n",
+       "...                                                       ...   \n",
+       "ZZ07                                           RICHARD Cécile   \n",
+       "ZZ08                                        CHARTRAIN Valérie   \n",
+       "ZZ09        BOUDJEKADA Ismaël, TINAUGUS Edouard, KHALFI Se...   \n",
+       "ZZ10                                           MAZOT Nathalie   \n",
+       "ZZ11                                          MARTIN Nathalie   \n",
+       "\n",
+       "CodNuaCand                                   ECO                  ENS  \\\n",
+       "CodCirc                                                                 \n",
+       "0101                                               GUILLERMIN Vincent   \n",
+       "0102                                                                    \n",
+       "0103                                                    GIVERNET Olga   \n",
+       "0104                                              COQUELET Christophe   \n",
+       "0105                            CHATELARD Thomas    DESCOURS Nathalie   \n",
+       "...                                          ...                  ...   \n",
+       "ZZ07                                                   PETIT Frédéric   \n",
+       "ZZ08                                                   YADAN Caroline   \n",
+       "ZZ09                                                   DJOUADI Samira   \n",
+       "ZZ10                                                   LAKRAFI Amélia   \n",
+       "ZZ11        CRUCIANI Jordan, BOTEVA-MALO Tatiana         GENETET Anne   \n",
+       "\n",
+       "CodNuaCand             EXD                 EXG  ...  \\\n",
+       "CodCirc                                         ...   \n",
+       "0101                                 LAHY Éric  ...   \n",
+       "0102        EYRAUD Olivier    GOUTAGNY Vincent  ...   \n",
+       "0103                        MAISONNETTE Cécile  ...   \n",
+       "0104                           COUSSON Sylvain  ...   \n",
+       "0105                             CROZET Sylvie  ...   \n",
+       "...                    ...                 ...  ...   \n",
+       "ZZ07                                            ...   \n",
+       "ZZ08                                            ...   \n",
+       "ZZ09                                            ...   \n",
+       "ZZ10                                            ...   \n",
+       "ZZ11            GUYON Marc                      ...   \n",
+       "\n",
+       "CodNuaCand                              LR RDG                    REC  \\\n",
+       "CodCirc                                                                 \n",
+       "0101                         BRETON Xavier                              \n",
+       "0102                      NANCHI Alexandre                              \n",
+       "0103                          UNAL Khadija                              \n",
+       "0104                         BILLOUDET Guy                              \n",
+       "0105                       BOURDIN Fabrice       PATRU Maria Cristina   \n",
+       "...                                    ...  ..                    ...   \n",
+       "ZZ07               MIER-GARRIGOU Dominique            ALEXANDRE Julie   \n",
+       "ZZ08        HABIB Meyer, ASSOULINE Aurelie       BENSOUSSAN Guillaume   \n",
+       "ZZ09                      BADREDDINE Jihad              DREVON Pierre   \n",
+       "ZZ10                           LAMAH Lucas         CASTELLAN Philippe   \n",
+       "ZZ11                                            LARQUEMIN Anne-France   \n",
        "\n",
        "CodNuaCand               REG                      RN SOC UDI  \\\n",
        "CodCirc                                                        \n",
@@ -1318,7 +1374,7 @@
        "[577 rows x 22 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1389,7 @@
     "        index = 'CodCirc',\n",
     "        columns = 'CodNuaCand',\n",
     "        values = 'Nom_Prenom',\n",
-    "        aggfunc='first'\n",
+    "        aggfunc= lambda x : ', '.join(x)\n",
     "    )\n",
     "    .replace(np.nan, '')\n",
     ")\n",
@@ -1343,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "2f72bc73-3a00-4636-af17-91c01cb04808",
    "metadata": {},
    "outputs": [],
