harmonise le code département

--- a/prep_lg2024.ipynb
+++ b/prep_lg2024.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "05b7e719-e175-439c-85c9-eb6d5b62895c",
    "metadata": {},
    "outputs": [
@@ -144,31 +144,31 @@
        "      <th>97501</th>\n",
        "      <td>Saint-Pierre-et-Miquelon</td>\n",
        "      <td>1</td>\n",
-       "      <td>975</td>\n",
+       "      <td>ZS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98601</th>\n",
        "      <td>1ère circonscription</td>\n",
        "      <td>1</td>\n",
-       "      <td>986</td>\n",
+       "      <td>ZW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98701</th>\n",
        "      <td>1ere circonscription</td>\n",
        "      <td>1</td>\n",
-       "      <td>987</td>\n",
+       "      <td>ZP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98702</th>\n",
        "      <td>2ème circonscription</td>\n",
        "      <td>1</td>\n",
-       "      <td>987</td>\n",
+       "      <td>ZP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98703</th>\n",
        "      <td>3ème circonscription</td>\n",
        "      <td>1</td>\n",
-       "      <td>987</td>\n",
+       "      <td>ZP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -214,11 +214,11 @@
       "text/plain": [
        "                          LibCirElec  NbSap CodDpt\n",
        "CodCirElec                                        \n",
-       "97501       Saint-Pierre-et-Miquelon      1    975\n",
-       "98601           1ère circonscription      1    986\n",
-       "98701           1ere circonscription      1    987\n",
-       "98702           2ème circonscription      1    987\n",
-       "98703           3ème circonscription      1    987\n",
+       "97501       Saint-Pierre-et-Miquelon      1     ZS\n",
+       "98601           1ère circonscription      1     ZW\n",
+       "98701           1ere circonscription      1     ZP\n",
+       "98702           2ème circonscription      1     ZP\n",
+       "98703           3ème circonscription      1     ZP\n",
        "...                              ...    ...    ...\n",
        "8405            5ème circonscription      1     84\n",
        "2A01            1ère circonscription      1     2A\n",
@@ -229,7 +229,7 @@
        "[577 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
     "        xpath='.//Circonscription'\n",
     "    )\n",
     "    .assign(\n",
-    "        CodDpt = lambda df: df.CodCirElec.str[:-2]\n",
+    "        CodDpt = lambda df: df.CodCirElec.str[:-2].replace(mapping_dept)\n",
     "    )\n",
     "    .set_index('CodCirElec')\n",
     "    .drop(['Communes'], axis=1)\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f61123eb-3768-4d08-afcf-cba4553d7a11",
    "metadata": {},
    "outputs": [],
