ajoute un export des départements pour avoir leur nom

--- a/prep_lg2024.ipynb
+++ b/prep_lg2024.ipynb
@@ -318,6 +318,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "895fc704-5542-4edc-917b-d8f48cc08a40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CodDpt</th>\n",
+       "      <th>LibDpt</th>\n",
+       "      <th>Circonscriptions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>975</td>\n",
+       "      <td>Saint-Pierre-et-Miquelon</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>986</td>\n",
+       "      <td>Wallis et Futuna</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>987</td>\n",
+       "      <td>Polynésie française</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>988</td>\n",
+       "      <td>Nouvelle-Calédonie</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ZX</td>\n",
+       "      <td>Saint-Martin/Saint-Barthélemy</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Bouches-du-Rhône</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>83</td>\n",
+       "      <td>Var</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>84</td>\n",
+       "      <td>Vaucluse</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>2A</td>\n",
+       "      <td>Corse-du-Sud</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2B</td>\n",
+       "      <td>Haute-Corse</td>\n",
+       "      <td>\\n</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    CodDpt                         LibDpt  Circonscriptions\n",
+       "0      975       Saint-Pierre-et-Miquelon  \\n              \n",
+       "1      986               Wallis et Futuna  \\n              \n",
+       "2      987            Polynésie française  \\n              \n",
+       "3      988             Nouvelle-Calédonie  \\n              \n",
+       "4       ZX  Saint-Martin/Saint-Barthélemy  \\n              \n",
+       "..     ...                            ...               ...\n",
+       "102     13               Bouches-du-Rhône  \\n              \n",
+       "103     83                            Var  \\n              \n",
+       "104     84                       Vaucluse  \\n              \n",
+       "105     2A                   Corse-du-Sud  \\n              \n",
+       "106     2B                    Haute-Corse  \\n              \n",
+       "\n",
+       "[107 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "departements = (\n",
+    "        (\n",
+    "            pd\n",
+    "            .read_xml(\n",
+    "                StringIO(territoire_xml),\n",
+    "                xpath = f'.//Region//Departement',\n",
+    "                dtype=\"object\"\n",
+    "            )\n",
+    "        )   \n",
+    ")\n",
+    "\n",
+    "departements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ff972ea7-cf7a-4293-83d5-6e355eec327e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "departements.to_csv('lg2024_departements.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "9020d19f-2fa3-4d62-ab84-5fe1b325716b",
    "metadata": {},
@@ -2735,8 +2886,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4c247c70-ccce-40b6-bccc-8ce26e27ff4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e62b3bba578413099519a1dbd8db07b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/577 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>CodCirc</th>\n",
+       "      <th>CodDept</th>\n",
+       "      <th>CodeReg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5069</td>\n",
+       "      <td>97501</td>\n",
+       "      <td>975</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9031</td>\n",
+       "      <td>98601</td>\n",
+       "      <td>986</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73776</td>\n",
+       "      <td>98701</td>\n",
+       "      <td>987</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>69245</td>\n",
+       "      <td>98702</td>\n",
+       "      <td>987</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>69028</td>\n",
+       "      <td>98703</td>\n",
+       "      <td>987</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84946</td>\n",
+       "      <td>8405</td>\n",
+       "      <td>84</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>52490</td>\n",
+       "      <td>2A01</td>\n",
+       "      <td>2A</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>62495</td>\n",
+       "      <td>2A02</td>\n",
+       "      <td>2A</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>62114</td>\n",
+       "      <td>2B01</td>\n",
+       "      <td>2B</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>67927</td>\n",
+       "      <td>2B02</td>\n",
+       "      <td>2B</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>577 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Nombre CodCirc CodDept CodeReg\n",
+       "0    5069   97501     975      00\n",
+       "0    9031   98601     986      00\n",
+       "0   73776   98701     987      00\n",
+       "0   69245   98702     987      00\n",
+       "0   69028   98703     987      00\n",
+       "..    ...     ...     ...     ...\n",
+       "0   84946    8405      84      93\n",
+       "0   52490    2A01      2A      94\n",
+       "0   62495    2A02      2A      94\n",
+       "0   62114    2B01      2B      94\n",
+       "0   67927    2B02      2B      94\n",
+       "\n",
+       "[577 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_inscrits_t1(CodCirc, CodDept, CodeReg):\n",
+    "    url = f'{base}/resultatsT1/{CodDept}/R1{CodCirc}.xml'\n",
+    "    \n",
+    "    try:\n",
+    "        df = (\n",
+    "            pd\n",
+    "            .read_xml(\n",
+    "                url,\n",
+    "                xpath = './/Inscrits',\n",
+    "                dtype = 'object'\n",
+    "            )\n",
+    "            .assign(\n",
+    "                CodCirc=CodCirc,\n",
+    "                CodDept=CodDept,\n",
+    "                CodeReg=CodeReg\n",
+    "            )\n",
+    "        )\n",
+    "        #print(url)\n",
+    "    except:\n",
+    "        #print(f'error: {circonscription}')\n",
+    "        df = None\n",
+    "        \n",
+    "    \n",
+    "    return df\n",
+    "    \n",
+    "    \n",
+    "inscrits_t1 = pd.concat(\n",
+    "    [\n",
+    "        get_inscrits_t1(c['CodCirElec'], c['CodDpt'], c['CodReg'])\n",
+    "        for idx, c in tqdm(list(circonscriptions.reset_index().iterrows()))\n",
+    "    ]\n",
+    ")\n",
+    "inscrits_t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "75e27d41-dd1f-4db9-8269-5e9efa3049f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Inscrits</th>\n",
+       "      <th>CodCirc</th>\n",
+       "      <th>CodDept</th>\n",
+       "      <th>CodeReg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CodCirc2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>01001</th>\n",
+       "      <td>86843</td>\n",
+       "      <td>0101</td>\n",
+       "      <td>01</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01002</th>\n",
+       "      <td>101874</td>\n",
+       "      <td>0102</td>\n",
+       "      <td>01</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01003</th>\n",
+       "      <td>84130</td>\n",
+       "      <td>0103</td>\n",
+       "      <td>01</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01004</th>\n",
+       "      <td>96119</td>\n",
+       "      <td>0104</td>\n",
+       "      <td>01</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01005</th>\n",
+       "      <td>77900</td>\n",
+       "      <td>0105</td>\n",
+       "      <td>01</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZZ007</th>\n",
+       "      <td>130824</td>\n",
+       "      <td>ZZ07</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZZ008</th>\n",
+       "      <td>148957</td>\n",
+       "      <td>ZZ08</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZZ009</th>\n",
+       "      <td>130387</td>\n",
+       "      <td>ZZ09</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZZ010</th>\n",
+       "      <td>113855</td>\n",
+       "      <td>ZZ10</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZZ011</th>\n",
+       "      <td>104619</td>\n",
+       "      <td>ZZ11</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>577 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Inscrits CodCirc CodDept CodeReg\n",
+       "CodCirc2                                 \n",
+       "01001       86843    0101      01      84\n",
+       "01002      101874    0102      01      84\n",
+       "01003       84130    0103      01      84\n",
+       "01004       96119    0104      01      84\n",
+       "01005       77900    0105      01      84\n",
+       "...           ...     ...     ...     ...\n",
+       "ZZ007      130824    ZZ07      ZZ      00\n",
+       "ZZ008      148957    ZZ08      ZZ      00\n",
+       "ZZ009      130387    ZZ09      ZZ      00\n",
+       "ZZ010      113855    ZZ10      ZZ      00\n",
+       "ZZ011      104619    ZZ11      ZZ      00\n",
+       "\n",
+       "[577 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inscrits_t1_2 = (\n",
+    "    inscrits_t1\n",
+    "    .join(\n",
+    "        circonscriptions\n",
+    "        .reset_index()\n",
+    "        .assign(\n",
+    "            CodCirc2 = lambda df: (\n",
+    "                df.CodDpt.replace(mapping_dept)\n",
+    "                + df.CodCirElec.astype(str).str[-2:].str.pad(3, fillchar='0')\n",
+    "            )\n",
+    "        )\n",
+    "        .set_index('CodCirElec')[['CodCirc2']],\n",
+    "        on = 'CodCirc'\n",
+    "    )\n",
+    "    .rename({\n",
+    "        'Nombre': 'Inscrits'\n",
+    "    }, axis=1)\n",
+    "    .set_index('CodCirc2')\n",
+    "    .sort_index()\n",
+    ")\n",
+    "\n",
+    "inscrits_t1_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c2a5aa74-35f3-43ae-93df-4c0f8252b645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inscrits_t1_2.to_csv('lg2024_t1_inscrits.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "818247f1-5ef5-45aa-a9f7-3e3bbd8a3999",
    "metadata": {},
    "outputs": [],
    "source": []
