utilise les codes départements du référentiel

--- a/prep_lg2024.ipynb
+++ b/prep_lg2024.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "895fc704-5542-4edc-917b-d8f48cc08a40",
    "metadata": {},
    "outputs": [
@@ -351,25 +351,25 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>975</td>\n",
+       "      <td>ZS</td>\n",
        "      <td>Saint-Pierre-et-Miquelon</td>\n",
        "      <td>\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>986</td>\n",
+       "      <td>ZW</td>\n",
        "      <td>Wallis et Futuna</td>\n",
        "      <td>\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>987</td>\n",
+       "      <td>ZP</td>\n",
        "      <td>Polynésie française</td>\n",
        "      <td>\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>988</td>\n",
+       "      <td>ZN</td>\n",
        "      <td>Nouvelle-Calédonie</td>\n",
        "      <td>\\n</td>\n",
        "    </tr>\n",
@@ -422,10 +422,10 @@
       ],
       "text/plain": [
        "    CodDpt                         LibDpt  Circonscriptions\n",
-       "0      975       Saint-Pierre-et-Miquelon  \\n              \n",
-       "1      986               Wallis et Futuna  \\n              \n",
-       "2      987            Polynésie française  \\n              \n",
-       "3      988             Nouvelle-Calédonie  \\n              \n",
+       "0       ZS       Saint-Pierre-et-Miquelon  \\n              \n",
+       "1       ZW               Wallis et Futuna  \\n              \n",
+       "2       ZP            Polynésie française  \\n              \n",
+       "3       ZN             Nouvelle-Calédonie  \\n              \n",
        "4       ZX  Saint-Martin/Saint-Barthélemy  \\n              \n",
        "..     ...                            ...               ...\n",
        "102     13               Bouches-du-Rhône  \\n              \n",
@@ -437,7 +437,7 @@
        "[107 rows x 3 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,10 @@
     "                xpath = f'.//Region//Departement',\n",
     "                dtype=\"object\"\n",
     "            )\n",
-    "        )   \n",
+    "        )\n",
+    "    .assign(\n",
+    "        CodDpt = lambda df: df.CodDpt.replace(mapping_dept)\n",
+    "    )\n",
     ")\n",
     "\n",
     "departements"
@@ -459,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "ff972ea7-cf7a-4293-83d5-6e355eec327e",
    "metadata": {},
    "outputs": [],
